file-layout(first aproach)/testing/services/cluster-web-servers/main.tf
variable "server_port" {
  description = "The port the server will use for HTTP requests"
  type = number
  default = 8080
}

provider "aws" {
    region = "us-east-2"
    profile = "personal"
}

terraform {
  backend "s3" {
      bucket = "private-terraform-state-test"
      key = "testing/services/cluster-web-servers/terraform.tfstate"
      region = "us-east-2"

      dynamodb_table = "private-terraform-locks-test"
      encrypt = true
  }
}

# Query info about default VPC in account.
data "aws_vpc" "default" {
  default = true
}

# Get all subnets from default VPC
data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}

resource "aws_launch_configuration" "example" {
  image_id = "ami-0c55b159cbfafe1f0"
  instance_type = "t2.micro"
  security_groups = [ aws_security_group.instance.id ]

  user_data = <<-EOF
    #!/bin/bash
    echo "Hello, World" > index.html
    nohup busybox httpd -f -p ${var.server_port} &
    EOF
  
  # Required when using a launch configuration with an autoscaling group.
  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_autoscaling_group" "example" {
  launch_configuration = aws_launch_configuration.example.name
  vpc_zone_identifier = data.aws_subnets.default.ids
  target_group_arns = [ aws_lb_target_group.asg.arn ]
  health_check_type = "ELB"

  min_size = 2
  max_size = 10

  tag {
    key = "Name"
    value = "terraform-asg-example"
    propagate_at_launch = true
  }
}

resource "aws_security_group" "instance" {
  name = "terraform-example-instance"
  description = "Ingress rule for webserver"
  
  ingress = [ {
    description = "Ingress rule for hello world"
    security_groups = [ ]
    ipv6_cidr_blocks = [ ]
    prefix_list_ids = [ ]
    self = false
    from_port = var.server_port
    to_port = var.server_port
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
  } ]

  egress = [{
    description = "Egress traffic"
    security_groups = [ ]
    self = false
    prefix_list_ids = [ ]
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }]
}

# Security group for loadbalancer
resource "aws_security_group" "alb" {
  name = "terraform-example-alb"

  # Allow inbound HTTP request
  ingress = [ {
    cidr_blocks = [ "0.0.0.0/0" ]
    description = "HTTP inbound traffic"
    from_port = 80
    ipv6_cidr_blocks = [ "::/0" ]
    prefix_list_ids = [ ]
    protocol = "tcp"
    security_groups = [ ]
    self = false
    to_port = 80
  } ]

  # Allow all outbound requests
  egress = [{
    description = "All egress traffic"
    security_groups = [ ]
    self = false
    prefix_list_ids = [ ]
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }]
}

# Application load balancer
resource "aws_lb" "example" {
  name = "terraform-asg-example"
  load_balancer_type = "application"
  subnets = data.aws_subnets.default.ids
  security_groups = [ aws_security_group.alb.id ]
}

# Application load balancer listener
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.example.arn
  port = 80
  protocol = "HTTP"

  # By default return a simple 404 page.
  default_action {
    type = "fixed-response"
    fixed_response {
      content_type = "text/plain"
      message_body = "404:page not found"
      status_code = 404
    }
  }
}

# Target group for loadbalancer
resource "aws_lb_target_group" "asg" {
  name = "terraform-asg-example"
  port = var.server_port
  protocol = "HTTP"
  vpc_id = data.aws_vpc.default.id

  health_check {
    path = "/"
    protocol = "HTTP"
    matcher = "200"
    interval = 15
    timeout = 3
    healthy_threshold = 2
    unhealthy_threshold = 2
  }
}

# Listeners
resource "aws_lb_listener_rule" "asg" {
  listener_arn = aws_lb_listener.http.arn
  priority = 100

  condition {
    path_pattern {
      values = ["*"]
    }
  }

  action {
    type = "forward"
    target_group_arn = aws_lb_target_group.asg.arn
  }
}

output "alb_dns_name" {
  value = aws_lb.example.dns_name
  description = "The domain name of the load balancer"
}
